--- a/src/managerTemplate.html
+++ b/src/managerTemplate.html
@@ -35,16 +35,44 @@
           <div class="card text-white ms-2" style="width: 18rem;">
             <div class="card-body bg-primary" >
               <h3 class="card-title">${Name}</h3>
-              <h4><i class="fa-solid fa-mug-hot"></i> Employee</h4> 
+              <h4><i class="fa-sharp fa-solid fa-glasses"></i> Engineer</h4> 
             </div>
             <ul class="card-body bg-dark p-2 list-group list-group-flush" style="--bs-bg-opacity:.1">
-              <li class="list-group-item">ID: ${employeeID}</li>
+              <li class="list-group-item">ID: ${engineerID}</li>
               <li class="list-group-item">Email: <a href="#">${email}</a></li>
               <li class="list-group-item">Office number: ${office}</li>
             </ul>
           </div>
         </div>
 
+
+        <div class="col">
+          <div class="card text-white ms-2" style="width: 18rem;">
+          <div class="card-body bg-primary" >
+            <h3 class="card-title">${intern.name}</h3>
+            <h4><i class="fa-sharp fa-solid fa-user-graduate"></i> Intern</h4> 
+          </div>
+          <ul class="card-body bg-dark p-2 list-group list-group-flush" style="--bs-bg-opacity:.1">
+            <li class="list-group-item">ID: ${intern.id}</li>
+            <li class="list-group-item">Email: <a href="mailto:${intern.email}">${intern.email}</a></li>
+            <li class="list-group-item">School: ${intern.school}</li>
+          </ul>
+          </div>
+          </div>
+
+          <div class="col">
+            <div class="card text-white ms-2" style="width: 18rem;">
+            <div class="card-body bg-primary" >
+              <h3 class="card-title">${intern.name}</h3>
+              <h4><i class="fa-sharp fa-solid fa-user-graduate"></i> Intern</h4> 
+            </div>
+            <ul class="card-body bg-dark p-2 list-group list-group-flush" style="--bs-bg-opacity:.1">
+              <li class="list-group-item">ID: ${intern.id}</li>
+              <li class="list-group-item">Email: <a href="mailto:${intern.email}">${intern.email}</a></li>
+              <li class="list-group-item">School: ${intern.school}</li>
+            </ul>
+            </div>
+            </div>
 
 
       </section> 
